kubernetes/testing/nginx-test/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.4-alpine
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        volumeMounts:
        - name: nginx-storage
          mountPath: /usr/share/nginx/html
      - name: toolbox
        image: alpine:latest
        # Installs nano and sleeps forever, keeping the container running for you to exec into.
        command: ["sh", "-c", "apk add --no-cache nano && sleep infinity"]
        volumeMounts:
        - name: nginx-storage
          mountPath: /data # Mount the shared volume at /data for easy access.
      volumes:
      - name: nginx-storage
        persistentVolumeClaim:
          claimName: nginx-pvc
